remove config as it is default with JDK 16